# balloon-fresh

./: .gitignore  .gitmodules  AGENTS.md  FINISH-PLAN.md  HARDWARE_CONNECTIONS.md  IMPLEMENTATION-PLAN.md  Makefile  README.md  SOFTWARE-SPRINT-PLAN.md  SOFTWARE-WORK-PLAN.md  pyproject.toml  pytest.ini
.githooks/: pre-push
blog/: 001-introduction.md
bom/: BOM.md
data/: FLASH-MANIFEST.csv  README.md  bitrate-sweep-1300-20260723.txt  bitrate-sweep-325-20260723.txt  bitrate-sweep-650-20260723.txt  box-mounted-rx-20260724.txt  final-sweep-rx-20260724.txt  full-sweep-rx-20260724.txt  full-sweep-tx-20260724.txt  generate_summary_plot.py  indoor-baseline-20260723.txt  make_recent_plots.py  metadata-template.json  phone-gps-walk-20260724.csv  phone-gps-walk-20260724.geojson  phone-gps-walk-20260724.gpx  post-solder-tx-20260724.txt  power-sweep-20260723.csv  power-sweep-raw-p0.txt  power-sweep-raw-p125.txt  power-sweep-raw-p3.txt  power-sweep-raw-p6.txt  power-sweep-raw-p9.txt  range-test-results.csv  range-test-template.csv  range_test_20260723_050511.csv  range_test_20260723_050511.raw  rx-capture-20260723.txt  smoke-test-rx-20260724.txt  smoke-test-rx-rawdump-20260724.txt  smoke-test-set-time-fix-20260724.txt  smoke-test-tx-20260724.txt  smoke-test-v2-20260724.txt  smoke-test-v3-20260724.txt  smoke-test-v3-rx-20260724.txt  smoke-test-v3-tx-20260724.txt  smoke-test-v4-20260724.txt  smoke-test-v4-rx-20260724.txt  smoke-test-v4-tx-20260724.txt  smoke-test-v5-20260724.txt  (+23 more)
docs/: ASSESSMENT-PROMPT.md  F33-MODULE-PLAN.md  FIRMWARE-BUILD-AUDIT.md  FLIGHT-BOARD-AUTO-BOOTSEL.md  FLRC-ALIGNMENT-ANALYSIS.md  FLRC-ALIGNMENT-FIX-PLAN.md  FLRC-PROGRESS-2026-07-16.md  HANDOVER-COMPLETE-2026-07-24.md  HANDOVER-KEY-ROTATION.md  HANDOVER-PROMPT.md  HANDOVER-range-tests-2026-07-23.md  HANDOVER-range-tests.md  HANDOVER-speed-tests-2026-07-23.md  HANDOVER-speed-tests.md  HANDOVER-sustained-throughput-2026-07-23.md  INTEGRATION-ASSESSMENT.md  OUTDOOR-TEST-PROCEDURE.md  PLAN-adaptive-sweep-firmware.md  PLAN-pre-range-testing-2026-07-23.md  PLAN-range-test-execution-2026-07-23.md  PLAN-range-tests.md  PLAN-speed-optimization.md  PLAN-tx-throughput-optimization.md  POWERBANK-DUMMY-LOAD-FIX.md  RANGE-THROUGHPUT-PLAN.md  RSSI-FIX-PLAN.md  SESSION-SUMMARY-2026-07-24.md  SPI-SINGLE-BATCH-TECHNIQUE.md  STATUS-balloon-circuit-design.md  STATUS-balloon-range-tests.md  SWEEP-RESULTS.md  UNIVERSAL-HANDOVER-PROMPT.md  WALK-AROUND-TEST-GUIDE.md  WALK-TEST-2026-07-24-POSTMORTEM.md  WALK-TEST-FIX-PLAN.md  WALK-TEST-POSTMORTEM.md  WORKSTREAM-INDEX.md  antenna-strategy.md  balloon-flight-lessons.md  balloon-options-analysis.md  (+77 more)
firmware/: BUILD_MAP.md  CMakeLists.txt  Makefile
firmware/rp2040/: .gitignore  CMakeLists.txt  README.md  platformio.ini
firmware/rp2040/scripts/: inject_build_id.py
firmware/rp2040/src/: dual_radio_gps_sweep_rx.cpp  dual_radio_gps_sweep_tx.cpp  dual_radio_sweep_rx.cpp  dual_radio_sweep_tx.cpp  flrc_bitrate_rx.cpp  flrc_bitrate_tx.cpp  flrc_cont_rx.cpp  flrc_cont_tx.cpp  flrc_dma_tx.cpp  flrc_pio_tx.cpp  flrc_pio_tx_v2.cpp  flrc_pio_tx_v3.cpp  flrc_range_rx.cpp  flrc_range_rx_auto.cpp  flrc_range_rx_gps.cpp  flrc_range_rx_sweep.cpp  flrc_range_tx.cpp  flrc_range_tx_auto.cpp  flrc_range_tx_gps.cpp  flrc_range_tx_sweep.cpp  flrc_raw_rx.cpp  flrc_raw_rx_20mhz.cpp  flrc_raw_tx.cpp  flrc_raw_tx_20mhz.cpp  flrc_raw_tx_batch.cpp  flrc_raw_tx_pipe.cpp  flrc_raw_tx_sweep.cpp  flrc_rx_main.cpp  flrc_rx_raw.cpp  flrc_spi_timing_diag.cpp  flrc_throughput_rx.cpp  flrc_throughput_tx.cpp  flrc_timing_profiler.cpp  flrc_tx_raw.cpp  gps_baud_scan.cpp  gps_raw_gpio.cpp  gps_test.cpp  gps_time.cpp  gps_time.h  gps_time_test.cpp  (+20 more)
firmware/rp2040/tools/: inject_git_version.py
ground-station/: README.md
mesh-stack/: AGENTS.md  INTEGRATION-ARCHITECTURE.md  ROADMAP.md  two-device-test-plan.md
mesh-stack/flrc-bench-espidf/main/: CMakeLists.txt  EspHalC3.h  Kconfig.projbuild  autonomous_main.cpp  bench_main.cpp  bootsel_ctrl.cpp  continuity_test.cpp  dump_main.cpp  fast_rx.cpp  fifo_test.cpp  fifo_tx.cpp  fips_bridge.cpp  idf_component.yml  nvs_results.cpp  nvs_results.h  prbs.cpp  prbs.h  profile_rx.cpp  range_test.cpp  range_test.h  spi_loopback.cpp  test_suite.h
patches/: market-1031-fix.patch
scripts/: capture_spi_timing.sh  coordinated_tx_rx_test.py  flash_characterization.sh  plot_walk_data.py  range_test_runner.py  rx_range_logger.py  sustained_test.py  sweep_capture.py  walk_analysis.py
tests/: TEST-PLAN.md  conftest.py  power-sweep-v2-results.md  sweep-pa-on-indoor-1m-results.md  sweep_pa_on_indoor_1m.csv  sweep_rssi_fixed_indoor_1m.csv  test_c_host.py  test_ground_station.py  test_link_budget.py  test_telemetry_to_nostr.py
tools/: 99-balloon-boards.rules  balloon-board-lock.py  balloon_flash_test.py  bench-test.sh  board-lock-assert.py  board-lock-monitor.py  board-serial.py  board_serial.py  board_serial_guard.py  capture_sweep.py  link_budget.py  (+25 more)
tracker/firmware/components/crypto/: AESEsp32.cpp  CMakeLists.txt  README.md  RNG.cpp
tracker/firmware/components/crypto/include/utility/: ProgMemUtil.h
tracker/firmware/components/meshcore/: CMakeLists.txt
tracker/firmware/components/meshcore/esp_idf/: EspIdfInterfaces.h
tracker/firmware/components/meshcore/meshcore/: Dispatcher.h  Identity.cpp  Identity.h  Mesh.cpp  Mesh.h  Packet.cpp  SimpleMeshTables.h  Utils.cpp  Utils.h
tracker/firmware/components/micro_ecc/: CMakeLists.txt  micro_ecc_init.c
tracker/firmware/components/micro_ecc/include/: micro_ecc_platform.h
tracker/firmware/components/micro_ecc/test/: test_micro_ecc.c
tracker/firmware/main/: CMakeLists.txt  EspHalC3.h  Kconfig.projbuild  app_main.cpp  idf_component.yml
tracker/ground-station/receiver/main/: CMakeLists.txt  EspHalC3.h  Kconfig.projbuild  gs_main.cpp  idf_component.yml
(+373 files in other folders)
